# orthogen

./: CMakeLists.txt  DebugParam.txt  LICENSE.txt  README  README.md
doc/: doc.tex
example/: config.json  readme.txt
lib/libjpeg/: CMakeLists.txt
lib/rapidjson/include/rapidjson/internal/: meta.h
lib/rapidjson/test/unittest/: documenttest.cpp  readertest.cpp  valuetest.cpp
panoalign/: CMakeLists.txt  align.cpp
src/: camera.h  config.h  extraction.h  ifs.h  image.h  main.cpp  matrix.h  meanshift.h  normenc.h  orthogenv1.cpp  pnm.cpp  pnm.h  pose.h  projection.cpp  projection.h  quad.h  quaternion.h  types.h  vec3.h
src/e57/: main.cpp
test/: bygade_manualshift.bat  run1.bat  run2.bat  run_bygade.bat  run_dataset1.bat  run_dataset1_autoalign.bat  run_dataset2.bat  testruns.txt
test/2015-01-14-dataset12/: run.bat  test_dataset4.bat  test_dataset4_1006.bat  testsuite.bat
